--- a/src/_assets/sass/_mixins.sass
+++ b/src/_assets/sass/_mixins.sass
@@ -2,7 +2,7 @@ $xsmall-width: 375px
 $small-width: 640px
 $medium-width: 900px
 $large-width: 1200px
-$xlarge-width: 1700px
+$xlarge-width: 1590px
 
 =xsmall 
   @media (min-width: #{$xsmall-width})
